# dnk_nv21tobgr

./: settings.gradle
app/: build.gradle
app/src/: main.rar
app/src/main/cpp/: CMakeLists.txt  rkcodecjni.cpp
app/src/main/cpp/include/: aw_api.h  aw_codec.h  rga.h  rkcodecjni.h  sFifo.h  types.h
app/src/main/java/com/dnak/rkcodec/: Rkcodec.java
gradle/wrapper/: gradle-wrapper.properties
poseestimation/: build.gradle
poseestimation/src/androidTest/java/com/seetatech/poseestimation/: ExampleInstrumentedTest.java
poseestimation/src/main/: AndroidManifest.xml
poseestimation/src/main/cpp/: CMakeLists.txt  poseEstimatejni.cpp  posejni.cpp
poseestimation/src/main/cpp/include/: Struct.h  com_seeta_sdk_PoseEstimation.h
poseestimation/src/main/java/com/seeta/sdk/: PoseEstimation.java
poseestimation/src/main/res/values/: strings.xml
poseestimation/src/test/java/com/seetatech/poseestimation/: ExampleUnitTest.java
